docs: bring back min-height for nav-x for proper height of secondary tabs
Change-Id: I865195b9fde9ec64fbe2c083c0d3617a55b54a0f

--- a/tools/droiddoc/templates-sdk/assets/css/default.css
+++ b/tools/droiddoc/templates-sdk/assets/css/default.css
@@ -3597,6 +3597,10 @@ a.download-sdk {
   padding-top: 14px;
 }
 
+#nav-x .wrap {
+  min-height:34px;
+}
+
 #nav-x .wrap,
 #searchResults.wrap {
     max-width:940px;
