add bottom-margin to div-based notes
Change-Id: I4c74ab362b00bfb68093a975171f777e3fb5eef9

--- a/tools/droiddoc/templates-sdk/assets/css/default.css
+++ b/tools/droiddoc/templates-sdk/assets/css/default.css
@@ -2185,6 +2185,12 @@ p.table-caption {
   color:#666;
 }
 
+div.note, 
+div.caution, 
+div.warning {
+  margin: 0 0 15px;
+}
+
 p.note, div.note, 
 p.caution, div.caution, 
 p.warning, div.warning {
