docs: combine all possible js files into one to reduce the number of requests Also make change to doc template and css to fix footer layout bug introduced by change 9edfa6db8c53ef9515aaeed734bea02c5d65e1e5
Change-Id: Icfb1b499abfca6a39b5bff8fab576b14a1cf960a

--- a/tools/droiddoc/templates-sdk/assets/css/default.css
+++ b/tools/droiddoc/templates-sdk/assets/css/default.css
@@ -4155,6 +4155,6 @@ a.download-sdk {
 .home-sections ul li.last {
   margin-right: 0px;
 }
-#footer {
+.fullpage #footer {
   margin-top: -40px;
 }
